heroku deploy commit

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
 
     {{> about }}
 
-    <!-- Callout -->
+    <!-- Large text -->
     <aside class="callout">
         <div class="text-vertical-center">
             <h1>Attention to Detail</h1>
