--- a/views/partials/contact.handlebars
+++ b/views/partials/contact.handlebars
@@ -1,11 +1,19 @@
     <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
+    <aside  id="contact" class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-6 col-lg-offset-3 text-center">
                     <h3>Contact</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name">
+                        <br>
+                        <input type="text" class="form-control" placeholder="Email">
+                        <br>
+                        <input type="text" class="form-control" placeholder="Subject">
+                        <br>
+                        <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                        <button class="btn btn-lg btn-dark">Submit</button>
+                    </div>    
                 </div>
             </div>
         </div>
