--- a/views/partials/portfolio.handlebars
+++ b/views/partials/portfolio.handlebars
@@ -7,22 +7,22 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="#">
+                            <a href="https://allansala27.github.io/TriviaGame/" target="blank">
                                 <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="#">
-                                <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                            <a href="https://nathanmiller9.github.io/project1/" target="blank">
+                                <img class="img-portfolio img-responsive" src="img/portfolio-2.jpeg">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="#">
-                                <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                            <a href="https://classic-courier.herokuapp.com/" target="blank">
+                                <img class="img-portfolio img-responsive" src="img/portfolio-3.png">
                             </a>
                         </div>
                     </div>
